# HospitalRecords

./: .gitignore  README.md  app.py  config.py  deploy.py  docker-compose.yml  hospital_management.py  import tkinter as tk.py  init_db.py  logging_config.py  migrations.py  requirements.txt  tests.py  utils.py
.github/workflows/: ci.yml
excel_ai_addin/: .gitignore  Dockerfile  Makefile  README.md  advanced_analysis.py  distribute.py  docker-compose.yml  excel_ai_addin.py  pyproject.toml  requirements.txt  setup.py  visualization.py
excel_ai_addin/.github/workflows/: ci.yml
excel_ai_addin/tests/: test_analyzer.py
templates/: base.html  dashboard.html  delivery_records.html  index.html  ipd_records.html  login.html  opd_records.html  ot_records.html  patient_register.html
